# rs-temp

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  LICENSE-MIT  README.md  cargo-generate.toml  cliff.toml  deny.toml
.github/workflows/: build.yml
