[package]
name = "{{ crate_name }}"
version = "0.1.0"
edition = "2024"
authors = ["{{ authors }}"]
description = "{{ project_description }}"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/{{ github_user }}/{{ project-name }}.git"
rust-version = "1.85"
# homepage = "https://github.com/{{ github_user }}/{{ project-name }}"
# documentation = "https://docs.rs/{{ crate_name }}"
# keywords = ["cli", "template"]
# categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
